Fixed mobile feedback list content overflow.

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -15,6 +15,7 @@ body {
 .feedback_list_thumb {
     padding: 15px;
 }
+
 .feedback_list_vote_icon {
     font-size: 2em;
     vertical-align: middle;
@@ -45,13 +46,14 @@ body {
 }
 
 .short-feedback-box, .short-feedback-box-with-image {
-    border-color: #aaa;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 10px;
+    /* border-color: #aaa;*/
+    /* border-style: solid;*/
+    /* border-width: 1px;*/
+    /* border-radius: 10px;*/
     padding: 0.5em;
     height: 200px;
     margin-top: 20px;
+    box-shadow: 1px 1px 3px 1px #aaa;
 }
 
 #info-row {
@@ -115,7 +117,7 @@ body {
 
 .feedback_list_content {
     padding: 10px;
-    height: 240px;
+    /*height: 240px;*/
 
 }
 
